syntax = "proto3";
//import "google/protobuf/empty.proto";
option java_multiple_files = true;

package com.assignment.protobuf;

message RequestLongId{
  int64 id=1;
}


message Animal{
  int64 regNr = 1;
  string arriveDate = 2;
  float weight = 3;
  string origin = 4;
}

message AnimalPart{
  int64 regNr = 1;
  string type = 2;
  int64 animalRef = 3;
  float weight = 4;
}

message Tray{
  int64 regNr = 1;
  float weight = 2;
  string partType = 3;
  repeated int64 partRef = 4;
}

message PartPack{
  int64 regNr = 1;
  repeated int64 trayRef = 2;
}


service SlaughterhouseService{
  rpc createAnimal(Animal) returns(Animal){}
  rpc createAnimalPart(AnimalPart) returns(AnimalPart){}
  rpc createTray(Tray) returns(Tray){}
  rpc createPartPack(PartPack) returns(PartPack){}



  rpc getAllAnimals(Animal) returns(stream Animal){}
  rpc getAnimalById(Animal) returns(Animal){}
  rpc getAnimalsByDate(Animal) returns(stream Animal){}
  rpc getAnimalByOrigin(Animal)returns (Animal){}

  rpc getAnimalsInvolvedInProductId(RequestLongId) returns(stream Animal){}
  rpc getProductsFromAnimalId(RequestLongId) returns(stream PartPack){}


  //rpc getAllAnimals(google.protobuf.Empty) returns(stream Animal){}
  rpc updateAnimal(Animal) returns(Animal){}
  //rpc deleteAnimal(Animal) returns(google.protobuf.Empty){}
}